@@ -10,6 +10,7 @@ Trunk
 		* Fixed crash on amulegui when exiting.
 		* Fix for unhandled exception in new skinned toolbar code.
 		* Coding style fixes.
+		* Fix for server disconnection during global search. 
 
 --------------------------------------------------------------------------------
 
